feat: INCLUIDO TESTES CONTROLLER E SERVICE INICIADO STORE